[package]
name = "kubectl-why-can"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.74"
clap = { version = "4.3", features = ["derive"] }
hyper = { version = "0.14.27" }
hyper-rustls = { version = "0.24.1" }
k8s-openapi = { version = "0.19.0", default-features = false, features=["v1_21"] }
kube = { version = "0.85.0", default-features = false, features = ["client", "rustls-tls"]}
kube-derive = { version = "0.85.0"}
tokio = { version = "1.32.0", features = ["full"] }
tokio-rustls = "0.24.1"
tower = { version = "0.4.13", features = ["limit"] }
tower-http = { version = "0.4.3", features = ["trace", "decompression-gzip"] }
tracing-subscriber = "0.3.17"
