[package]
name = "kubectl-why-can"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5", features = ["derive"] }
hyper = { version = "1.3.1" }
hyper-rustls = { version = "0.27.1" }
hyper-util = { version = "0.1.3", features = ["client-legacy"] }
k8s-openapi = { version = "0.22.0", default-features = false, features=["v1_24"] }
kube = { version = "0.92.0", default-features = false, features = ["client", "rustls-tls", "socks5", "http-proxy"]}
kube-derive = { version = "0.92.0"}
tokio = { version = "1.37.0", features = ["full"] }
tokio-rustls = "0.26.0"
tower = { version = "0.4.13", features = ["limit"] }
tower-http = { version = "0.5.2", features = ["trace", "decompression-gzip"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
